Prepared main.html and main.css for folder selection functionality

--- a/main/main.html
+++ b/main/main.html
@@ -16,7 +16,13 @@
 		
 		<select id="account-selection"></select>
 
-		<p>Account Name: <span id="account-name"></span></p>
-		<p>Number of Folders: <span id="account-folder-count"></span></p>
+		<div id="folder-selection-panel">
+			<p>Account Name: <span id="account-name"></span></p>
+			<p>Number of Folders: <span id="account-folder-count"></span></p>
+
+			<select id="folder-selection"></select>
+
+			<p id="folder-information-panel">Total Message Count: <span id="folder-message-count"></span></p>
+		</div>
 	</body>
 </html>
